--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,9 +1,12 @@
 version: 1.0
-runtime: python3 
+runtime: python3
 build:
   commands:
     build:
-      - pip install pipenv
-      - pipenv install 
-run: 
+    - pip install pipenv
+    - pipenv install
+    - pip install -r requirements.txt
+run:
   command: python productpage.py
+  network:
+    port: 9080
