--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -7,6 +7,7 @@ build:
     - pipenv install
     - pip install -r requirements.txt
 run:
+  runtime-version: 3.7.7
   command: python productpage.py
   network:
     port: 9080
