--- a/apprunner.yaml
+++ b/apprunner.yaml
@@ -1,10 +1,10 @@
 version: 1.0
-runtime: python3
+runtime: nodejs12
 build:
   commands:
     build:
-    - pip install -r requirements.txt
+    - npm install
 run:
-  command: python productpage.py
+  command: node index.js
   network:
-    port: 9080
+    port: 3000
